# cookiecutter-vs-cmake

./: LICENCE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.__solution_name }}/: CMakeLists.txt  {{ cookiecutter.__project_cmake_name }}.cpp  {{ cookiecutter.__project_name }}.cpp
{{ cookiecutter.__solution_name }}/{{ cookiecutter.__project_name }}/: {{ cookiecutter.__project_name }}.h
{{ cookiecutter.solution_name }}/: CMakeLists.txt  {{ cookiecutter.__project_cmake_name }}.h
{{ cookiecutter.solution_name }}/{{ cookiecutter.__project_name }}/: CMakeLists.txt
